[package]
name = "uhyve-client"
version = "0.1.0"
authors = ["Simon Pickartz <spickartz@eonerc.rwth-aachen.de>"]

[dependencies]
rocket = "0.3.16"
serde_json = "1.0.27"
[lib]
name = "libuhyve"
path = "src/libuhyve.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "uhyve-client"
path = "src/uhyve-client.rs"
