[package]
name = "uhyve-client"
version = "0.1.0"
authors = ["Simon Pickartz <spickartz@eonerc.rwth-aachen.de>"]

[dependencies]
rocket = "0.5.1"
serde_json = "1.0.140"
clap = { version = "4.5.36" }

[lib]
name = "libuhyve"
path = "src/libuhyve.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "uhyve-client"
path = "src/uhyve-client.rs"
